<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/description"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:textColor="@color/gray"
            android:autofillHints="@string/hint_password"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_username"
            android:textColor="@color/gray"
            android:autofillHints="@string/hint_password"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/light_black"
            android:text="@string/submit"
            app:backgroundTint="@color/red"
            android:onClick="onClick" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>